--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,11 @@
             <version>1.2.0</version>
         </dependency>
         <dependency>
+            <groupId>com.lacv</groupId>
+            <artifactId>jmagrexs-modules</artifactId>
+            <version>1.1.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.glassfish.web</groupId>
             <artifactId>javax.servlet.jsp.jstl</artifactId>
             <version>1.2.5-b03</version>
