--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
         <dependency>
             <groupId>com.lacv</groupId>
             <artifactId>jmagrexs</artifactId>
-            <version>1.2.0</version>
+            <version>1.2.1</version>
         </dependency>
         <dependency>
             <groupId>com.lacv</groupId>
@@ -89,7 +89,7 @@
             </activation>
             <properties>
                 <static.domain.url>http://localhost:8082/</static.domain.url>
-                <static.folder>C:\apps\apache-tomcat-9.0.12-agogui\webapps</static.folder>
+                <static.folder>C:\apps\apache-tomcat-9.0.12-agogui\webapps\</static.folder>
                 
                 <mail.host>smtp.gmail.com</mail.host>
                 <mail.port>587</mail.port>
