--- a/pom.xml
+++ b/pom.xml
@@ -25,9 +25,9 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+        <sitemesh.version>3.0.1</sitemesh.version>
         <timestamp>${maven.build.timestamp}</timestamp>
         <maven.build.timestamp.format>dd-MM-yyyy HH:mm</maven.build.timestamp.format>
-        <sitemesh.version>3.0.1</sitemesh.version>
     </properties>
 
     <dependencies>
@@ -88,8 +88,10 @@
                 </property>
             </activation>
             <properties>
-                <static.domain.url>http://localhost:8082/</static.domain.url>
-                <static.folder>C:\apps\apache-tomcat-9.0.12-agogui\webapps\</static.folder>
+                <local.static.domain>http://localhost:8082</local.static.domain>
+                <local.static.folder.linux>/opt/apache-tomcat-9.0.8-agogui/webapps/</local.static.folder.linux>
+                <local.static.folder.windows>C:\apps\apache-tomcat-9.0.12-agogui\webapps\</local.static.folder.windows>
+                <local.rootfolder>recursos/</local.rootfolder>
                 
                 <mail.host>smtp.gmail.com</mail.host>
                 <mail.port>587</mail.port>
@@ -107,8 +109,10 @@
                 </property>
             </activation>
             <properties>
-                <static.domain.url>http://186.83.137.240:8084/</static.domain.url>
-                <static.folder>/opt/apache-tomcat-9.0.8-agogui/webapps/</static.folder>
+                <local.static.domain>http://186.83.137.240:8084</local.static.domain>
+                <local.static.folder.linux>/opt/apache-tomcat-9.0.8-agogui/webapps/</local.static.folder.linux>
+                <local.static.folder.windows>C:\apps\apache-tomcat-9.0.12-agogui\webapps\</local.static.folder.windows>
+                <local.rootfolder>recursos/</local.rootfolder>
                 
                 <mail.host>smtp.gmail.com</mail.host>
                 <mail.port>587</mail.port>
@@ -126,8 +130,10 @@
                 </property>
             </activation>
             <properties>
-                <static.domain.url>http://www.agogui.tk/</static.domain.url>
-                <static.folder>/opt/apache-tomcat-9.0.8-agogui/webapps/</static.folder>
+                <local.static.domain>http://www.agogui.tk</local.static.domain>
+                <local.static.folder.linux>/opt/apache-tomcat-9.0.8-agogui/webapps/</local.static.folder.linux>
+                <local.static.folder.windows>C:\apps\apache-tomcat-9.0.12-agogui\webapps\</local.static.folder.windows>
+                <local.rootfolder>recursos/</local.rootfolder>
                 
                 <mail.host>smtp.gmail.com</mail.host>
                 <mail.port>587</mail.port>
