Upload Files in config List object

--- a/pom.xml
+++ b/pom.xml
@@ -89,7 +89,7 @@
             </activation>
             <properties>
                 <local.static.domain>http://localhost:8082</local.static.domain>
-                <local.static.folder.linux>/opt/apache-tomcat-9.0.8-agogui/webapps/</local.static.folder.linux>
+                <local.static.folder.linux>/opt/FILES/agogui/</local.static.folder.linux>
                 <local.static.folder.windows>C:\apps\FILES\agogui\</local.static.folder.windows>
                 <local.rootfolder>recursos/</local.rootfolder>
                 
